--- a/citysynergy/package.json
+++ b/citysynergy/package.json
@@ -13,16 +13,19 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cloudinary": "^2.6.0",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.2.0",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "sequelize": "^6.30.0",
+    "socket.io": "^4.8.1",
     "swagger": "^0.0.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
